# know_how

documents/: Shell.md
documents/distributed/: paxos.docx
documents/summary/: 打印机适配总结.docx
markdown/: Bugs.md  GTK.md  Kernel.md  Python.md  README.md
markdown/practical/: howtomodifyISO.md  rsync_sys.sh
program/asm/: CMakeLists.txt
program/asm/01boot-gdt/: CMakeLists.txt  Makefile
program/asm/02boot-to-user/: Makefile  head.S
program/asm/03boot-to-c/: head.S  main.c
program/asm/04boot-gdb/: Makefile  bochsrc  main.c  main.s
program/asm/04boot-syscall/: Makefile  boot.S  head.S  main.c
program/asm/05boot-timer/: head.S
program/asm/06multi-task/: README  head.S
program/asm/07boot-LBA86/: Makefile  README  bochsrc  boot.S
program/asm/08boot-LBA386/: Makefile  README  bochsrc  boot.S  head.S
program/asm/09boot-8259A/: README  bochsrc  head.S
program/asm/10boot-keyboard/: README  head.S
program/asm/11boot-grub/: Makefile  bochsrc  boot.S
program/asm/boot/: bochsrc  boot.S
program/asm/boot-gdt/: boot.S
program/asm/boot-syscall/: head.S
program/asm/boot-timer/: head.S
program/asm/boot-to-user/: head.S
program/gcc/barrier/: Makefile  runtime_barrier.cpp
program/gnu-system/test_gobject/: Makefile  animal_object.c  animal_object.h  bird_object.c  bird_object.h  main.c
program/struct/: heap.go
program/sub-sys/libc/: Makefile  bash.c  cat.c  crt.c  dodolook.txt  helloworld.c  ln.c  ls.c  one_task.c  one_task.sym  stdio.h  unistd.h
program/sub-sys/mem/: Makefile  boot.S  main.c  main.h  (+2 more)
program/sub-sys/vga/: CMakeLists.txt  bochsrc  boot.S  main.c  main.h  vga.c  vga.h
(+76 files in other folders)
